--- a/configs/config.json
+++ b/configs/config.json
@@ -1,5 +1,5 @@
 {
-  "github": "shettysach",
+  "github": "Mayank77maruti",
 
   "about": {
     "name": "Sachith C Shetty",
@@ -29,8 +29,8 @@
   },
 
   "links": {
-    "github": "shettysach",
-    "email": "ShettySachith47@gmail.com",
+    "github": "Mayank77maruti",
+    "email": "Mayank77marutiith47@gmail.com",
     "linkedin": "in/sachith-shetty-3a165724b",
     "twitter": null
   }
