--- a/configs/config.json
+++ b/configs/config.json
@@ -118,7 +118,7 @@
   "links": {
     "github": "Mayank77maruti",
     "email": "mayank.m.nita@gmail.com",
-    "linkedin": "https://www.linkedin.com/in/mayank-mohapatra-697744267/",
+    "linkedin": "mayank-mohapatra-697744267/",
     "leetcode": "Mayank",
     "codeforces": "Mayank",
     "geeksforgeeks": "Mayank"
